update for JRE8